<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.eidem.integratedmovielookup.ui.viewmodel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dayOfWeekList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <com.eidem.integratedmovielookup.view.CarouselRecyclerview
            android:id="@+id/moviePosterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dayOfWeekList"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/moviePosterList"
            android:layout_alignEnd="@id/moviePosterList"
            android:layout_marginEnd="30dp"
            android:text="@string/inquire_movie_time"
            android:onClick="@{()->viewModel.onClickShowSchedule()}"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/moviePosterList"
            android:layout_above="@id/adView"
            android:layout_marginBottom="20dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="크루엘라"/>
                <TextView
                    android:id="@+id/tvNameEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Hostage"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_open_date"/>
                    <TextView
                        android:id="@+id/tvOpenDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2021-09-01"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_product_state"/>
                    <TextView
                        android:id="@+id/movieProductState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="개봉"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_watch_grade_number"/>
                    <TextView
                        android:id="@+id/watchGradeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12세 관람"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_running_time"/>
                    <TextView
                        android:id="@+id/showTm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="93분 34초"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_nation_name"/>
                    <TextView
                        android:id="@+id/repNationCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="미국"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_director"/>
                    <TextView
                        android:id="@+id/director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="데스틴 다니엘 크리튼"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_genre"/>
                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="액션,어드벤처,판타지"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_director_company"/>
                    <TextView
                        android:id="@+id/dtNm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="월트디즈니컴퍼니코리아 유한책임회사"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_for_test"/>
    </RelativeLayout>
</layout>